syntax = "proto3";

package rms;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/insolar/assured-ledger/ledger-core/v2/rms/insproto/ins.proto";

option (insproto.insproto_notation_all) = true;

message RecordExample {
    //*** Start of predefined section ***//
    option (insproto.id) = 199;
    reserved 1 to 15, 1792 to max;
    // uint32 Polymorph = 16;
    bytes BodyHash = 1791 [(gogoproto.customtype) = "RecordBodyHolder", (gogoproto.nullable) = false];
    //*** End of predefined section ***//

    string Str = 21 [(gogoproto.customtype) = "github.com/insolar/assured-ledger/ledger-core/v2/vanilla/longbits.ByteString", (gogoproto.nullable) = false];
}

message MessageExample {
    //*** Start of predefined section ***//
    reserved 1 to 15, 20 to 1791, 1794 to 1799;
    option (insproto.id) = 99;
    uint32 Polymorph = 16;
    // put proper Record type here
    RecordExample Record = 1792 [(gogoproto.embed) = true];
    //*** End of predefined section ***//

    // custom fields
    uint64 MsgParam = 1800;
    bytes MsgBytes = 1801;

    message Head {
        // mention some fields from Msg and/or Record, without extensions
        uint64 MsgParam = 1800;
        string Str = 21;
    }
}

